java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlightingRecords/RecordCompactConstructors.java
class NotRecord {
  public <error descr="Parameter list expected">NotRecord</error> {
    
  }
}